<resources>
    <string name="app_name">Event Planner</string>
    <string name="Header">Event Planner</string>
    <string name="Event_name">Birthday Party</string>
    <string name="Time_left_value">28:14:06:05</string>
    <string name="Time_left">Time Left</string>
    <string name="Task">Task List</string>
    <string name="gue">Guests</string>
    <string name="bud">Budget</string>
    <string name="ven">Vendors</string>
    <string name="dash">Dashboard</string>
    <string name="editdetails">Task Details</string>
    <string name="addtaskdetail">Task Details</string>
    <string name="addpage">ADD NEW TASK</string>
    <string name="editpage">Edit TASK</string>
    <string name="AddGuEst">Add A Guest</string>
    <string name="Msg1">Vendor Details</string>
    <string name="Msg2">Name</string>
    <string name="Msg3">Category</string>
    <string name="Msg4">Note</string>
    <string name="Msg5">Estimated Amount</string>
    <string name="Msg6">Contact Details</string>
    <string name="Msg7">Phone number</string>
    <string name="Msg8">Email</string>
    <string name="Msg9">Address</string>
    <string name="Msg10">Payments</string>
    <string name="Msg11">Paid Amount</string>
    <string name="Msg12">Paid Date</string>
    <string name="invalid_name">Please enter a valid name</string>
    <string name="invalid_category">Enter a valid category</string>
    <string name="invalid_note">Enter a valid note</string>
    <string name="invalid_amount">Please enter a valid amount</string>
    <string name="invalid_mobile">Please enter a valid mobile number</string>
    <string name="invalid_email">Enter a valid email address</string>
</resources>
